@@ -1,10 +1,13 @@
+20140305 - fhabermann
+* added restore for page
+
 20140304 - fhabermann
 * enable accordion open-close on full title bar (Closes #23)
 * added bootboxjs
 * added restore button for content
 * added restore function for title and content
 
-20130301 - Knowledgeroot 2 alpha1
+20140301 - Knowledgeroot 2 alpha1
 
 20140105 - fhabermann
 * renew move content up and down to fix existing problems (Closes #6)
